--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cypress": "^13.15.0"
+    "cypress": "^13.15.0",
+    "@shelex/cypress-allure-plugin": "^13.15.0",
+    "allure-commandline": "^13.15.0"
   }
 }
